2023-03-27: before create new branch for add new thinks - 12.32 pm

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                     <a href="#" class="navbar__links">HOME</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="#" class="navbar__links">ABOUT</a>
+                    <a href="#about" class="navbar__links">ABOUT</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="#" class="navbar__links">COMMITEES</a>
+                    <a href="#Commitees" class="navbar__links">COMMITEES</a>
                 </li>
                 <li class="navbar__btn">
                     <a href="#" class="button">GET MEMBERSHIP</a>
@@ -63,7 +63,7 @@
     <div class="services">
         <h1>Who We Are</h1>
         <div class="services__containeer">
-            <div class="services__card">
+            <div class="services__card " id="about">
                 <h2>About and Timeline</h2>
                 <p>
                     Enhance your awareness of the world's largest technical professional organization...
@@ -72,7 +72,7 @@
                     <button>See more...</button>
                 </div>
             </div>
-            <div class="services__card">
+            <div class="services__card" id="Commitees">
                 <h2>Our Commitees</h2>
                 <p>
                     We are delighted to introduce a new cohort of IEEE UWU SB Executive Committee  and The awe - inspiring Organizing Committee  of  IEEE Open Day 2023.
