--- a/index.html
+++ b/index.html
@@ -6,18 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IEEE OPENDAY 2023</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//use.fontawesome.com/releases/v5.7.2/css/all.css">
-    <link rel="stylesheet" href="mainStyles.css">
+    <link rel="stylesheet" href="css/mainStyles.css">
 </head>
 <body>
     <!-- NAVIGATION BAR -->
     <nav class="navbar">
-        <div class="navbar__container">
+        <div class="logo">
             <a href="#" id="navbar__logo">
-                <img src="Images/logo-2023.png" alt="logo-2022" class="navbar__logo">
+                <img src="Images/logo-2023.png" alt="logo-2023" class="navbar__logo">
             </a>
+        </div>
+        <div class="navbar__container">
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span> 
                 <span class="bar"></span>
@@ -25,16 +27,16 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="#" class="navbar__links">HOME</a>
+                    <a href="/index.html" class="navbar__links">HOME</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="#about" class="navbar__links">ABOUT</a>
+                    <a href="/about.html" class="navbar__links">ABOUT</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="#Commitees" class="navbar__links">COMMITEES</a>
+                    <a href="/committee.html" class="navbar__links">COMMITEES</a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="#" class="button">GET MEMBERSHIP</a>
+                    <a href="/get_membership.html" class="button">GET MEMBERSHIP</a>
                 </li>
             </ul>
         </div>
@@ -61,7 +63,7 @@
 
     <!-- services -->
     <div class="services">
-        <h1>Who We Are</h1>
+        <h1 class="common__heder">Who We Are</h1>
         <div class="services__containeer">
             <div class="services__card " id="about">
                 <h2>About and Timeline</h2>
@@ -78,13 +80,13 @@
                     We are delighted to introduce a new cohort of IEEE UWU SB Executive Committee  and The awe - inspiring Organizing Committee  of  IEEE Open Day 2023.
                 </p>
                 <div class="services__btn">
-                    <button>See more...</button>
+                    <button id="btnCommitees">See more...</button>
                 </div>
             </div>
         </div>
     </div>
 
 
-    <script src="./main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
