2023-04-11: add newly Time counter in my design - 03:02

--- a/committee.html
+++ b/committee.html
@@ -38,14 +38,14 @@
                     <a href="/committee.html" class="navbar__links">COMMITEES</a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="/get_membership.html" class="button">GET MEMBERSHIP</a>
+                    <a href="/get_membership.html" class="button">JOIN WITH US</a>
                 </li>
             </ul>
         </div>
     </nav>
 
     <section class="commitee__main">
-        <h1 class="common__heder"> Members Of Our OC </h1>
+        <h1 class="common__heder"> Members Of Our OC - 2023 </h1>
         <!-- Program Team -->
         <div class="team">
             <h2 class="subhed">Program Team</h2>
