--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a href="/committee.html" class="navbar__links">COMMITEES</a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="/get_membership.html" class="button">GET MEMBERSHIP</a>
+                    <a href="/get_membership.html" class="button">JOIN WITH US</a>
                 </li>
             </ul>
         </div>
@@ -52,7 +52,7 @@
                     For the betterment of evolving technological world explorers
                 </p>
                 <button class="main__btn">
-                    <a href="#">Get Membership</a>
+                    <a href="#">Join With Us</a>
                 </button>
             </div>
             <div class="main__img--container">
@@ -60,10 +60,34 @@
             </div>
         </div>
     </div>
-
+    
     <!-- services -->
     <div class="services">
         <h1 class="common__heder">Who We Are</h1>
+        <!-- Time count dound -->
+        <div class="time__count">
+            <!-- <div>
+                <h1 class="common__heder">Saty Tude</h1>
+            </div> -->
+            <div class="countdown">
+                <div class="containeer__day">
+                    <h3 class="day">Time</h3>
+                    <h3>Day</h3>
+                </div>
+                <div class="containeer__hour">
+                    <h3 class="hour">Time</h3>
+                    <h3>Hour</h3>
+                </div>
+                <div class="containeer__minute">
+                    <h3 class="minute">Time</h3>
+                    <h3>Minute</h3>
+                </div>
+                <div class="containeer__second">
+                    <h3 class="second">Time</h3>
+                    <h3>Second</h3>
+                </div>
+            </div>
+        </div>
         <div class="services__containeer">
             <div class="services__card " id="about">
                 <h2>About and Timeline</h2>
@@ -75,7 +99,7 @@
                 </div>
             </div>
             <div class="services__card" id="Commitees">
-                <h2>Our Commitees</h2>
+                <h2>Our Commitees - 2023</h2>
                 <p>
                     We are delighted to introduce a new cohort of IEEE UWU SB Executive Committee  and The awe - inspiring Organizing Committee  of  IEEE Open Day 2023.
                 </p>
@@ -85,6 +109,7 @@
             </div>
         </div>
     </div>
+
 
 
     <script src="js/main.js"></script>
