--- a/committee.html
+++ b/committee.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="//use.fontawesome.com/releases/v5.7.2/css/all.css">
 </head>
 
-<body class="commitee">
+<body class="commitee__all">
     <!-- NAVIGATION BAR -->
     <nav class="navbar">
         <div class="logo">
