Add functionn for reg form     -connect google form     -connect whatapp group

--- a/committee.html
+++ b/committee.html
@@ -38,7 +38,7 @@
                     <a href="/committee.html" class="navbar__links">COMMITEES</a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="/get_membership.html" class="button">JOIN WITH US</a>
+                    <a href="/index.html#registation" class="button">JOIN WITH US</a>
                 </li>
             </ul>
         </div>
