--- a/get_membership.html
+++ b/get_membership.html
@@ -101,15 +101,15 @@
     </nav>
 
     <section class="commitee__main">
-        <h1 class="common__heder"> Thank You </h1>
+        <h1 class="common__heder"> Thank You !</h1>
         <!-- Program Team -->
         <div class="team about">
             <div class="team__box about__box">
                 <div class="box">
                     <div class="elements content thank__content">
                         <p>
-                            <small style="font-size: 1.2rem;">We keep your data scretly.</small><br>
-                            If You like to join Our Whatapp group, click below.
+                            <small style="font-size: 1.2rem;">Your information is safe with us.</small><br>
+                            To join our WhatsApp community, click the link below.
                         </p>
                     </div>
                     <div class="elements imgSuccess" id="imgSuccess"></div>
@@ -139,7 +139,8 @@
         const Whatapp = document.querySelector('#btnWhatapp');
 
         Whatapp.addEventListener('click', () =>{
-            window.location.href="https://chat.whatsapp.com/JsTD0zDQXjyFqGjChBgK6D";
+            window.open('https://chat.whatsapp.com/JsTD0zDQXjyFqGjChBgK6D','_blank');
+            /* window.location.href="https://chat.whatsapp.com/JsTD0zDQXjyFqGjChBgK6D"; */
         });
     </script>
 </body>
