--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         For the betterment of evolving technological world explorers.
                     </p>
                     <button class="main__btn">
-                        <a href="#registation">Join With Us</a>
+                        <a href="/index.html#registation">Join With Us</a>
                     </button>
                 </div>
             </div>
