--- a/index.html
+++ b/index.html
@@ -134,30 +134,33 @@
         <div class="benefit__container">
             <h2>Benefits of having membership inside IEEE Uva Wellassa University Student Branch</h2>
             <div class="row">
-                <div class="box_B">
+                <div class="box">
                      <p>
                         The organizing committees of the projects conducted by the student branch are only allowed to be applied by the members who have taken up student branch membership.
                      </p>
                 </div>
-                <div class="box_B">
-                    <p>
-                        The IEEEXtreme is open for participation to those who have obtained IEEE membership (international), and similarly, obtaining student branch membership enables you to participate in Codify
-                    </p>
+                <div class="box">
+                    <div class="elements">
+                        <p>
+                            The IEEEXtreme is open for participation to those who have obtained IEEE membership (international), and similarly, obtaining student branch membership enables you to participate in Codify
+                        </p>
+                    </div>elements
                </div>
-               <div class="box_B">
+               <div class="box">
+                <div class="elements">
                      <p>
                         When you apply for national volunteering, you will be recommended through our student branch.
-                     </p>
+                     </p></div>
                 </div>
-                <div class="box_B">
+                <div class="box"><div class="elements">
                     <p>
                         An E-certificate, including the membership number, will be issued.
                     </p>
-               </div>
-               <div class="box_B">
+               </div></div>
+               <div class="box"><div class="elements">
                      <p>
                         When you start working on your research, past seniors related to your research will be contacted in order to secure support for you.
-                     </p>
+                     </p></div>
                 </div>
             </div>
         </div>
